--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": ".",
   "dependencies": {
     "@babel/core": "^7.23.3",
+    "@babel/plugin-syntax-flow": "^7.23.3",
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@dnd-kit/core": "^6.0.8",
@@ -56,6 +58,7 @@
     "escape-string-regexp": "^5.0.0",
     "eslint": "^8.53.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-webpack-plugin": "^4.0.1",
     "file-loader": "^6.2.0",
     "formik": "^2.4.3",
@@ -83,6 +86,7 @@
     "postcss-preset-env": "^9.3.0",
     "process": "^0.11.10",
     "prompts": "^2.4.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-avatar-editor": "^13.0.0",
