--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/sanitize-html": "^2.9.0",
     "@types/twemoji-parser": "^13.1.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "assert": "^2.1.0",
