--- a/package.json
+++ b/package.json
@@ -128,8 +128,7 @@
     "webpack": "^5.89.0",
     "webpack-dev-server": "^4.15.1",
     "webpack-manifest-plugin": "^5.0.0",
-    "workbox-webpack-plugin": "^7.0.0",
-    "yup": "^1.2.0"
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
