--- a/package.json
+++ b/package.json
@@ -132,9 +132,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "./release",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "rev": "./build-number -j > src/build-number.js",
     "analyze": "source-map-explorer --gzip 'build/static/js/*.js'"
   },
   "eslintConfig": {
