--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "buffer": "^6.0.3",
     "camelcase": "^8.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "change-case": "^5.3.0",
     "classnames": "^2.3.2",
     "clipboard-copy": "^4.0.1",
     "css-loader": "^6.8.1",
@@ -142,7 +143,9 @@
     "rules": {
       "import/no-anonymous-default-export": "off"
     },
-    "ignorePatterns": ["**/api-validators.js"]
+    "ignorePatterns": [
+      "**/api-validators.js"
+    ]
   },
   "browserslist": [
     ">0.2%",
