--- a/package.json
+++ b/package.json
@@ -129,6 +129,11 @@
     "webpack": "^5.89.0",
     "webpack-dev-server": "^4.15.1",
     "webpack-manifest-plugin": "^5.0.0",
+    "workbox-broadcast-update": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "scripts": {
