--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "prompts": "^2.4.2",
     "prop-types": "^15.8.1",
     "quill": "^2.0.2",
+    "quill-magic-url": "^4.2.0",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-avatar-editor": "^13.0.0",
