--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "source-map-loader": "^4.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
+    "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.5.0",
     "twemoji-parser": "^14.0.0",
