--- a/package.json
+++ b/package.json
@@ -4,11 +4,6 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/plugin-syntax-flow": "^7.23.3",
-    "@babel/plugin-transform-react-jsx": "^7.22.15",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
@@ -18,79 +13,37 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@popperjs/core": "^2.11.8",
     "@seznam/compose-react-refs": "^1.0.6",
     "@stomp/stompjs": "^7.0.0",
-    "@svgr/webpack": "^8.1.0",
-    "@types/autosize": "^4.0.1",
-    "@types/jest": "^29.5.4",
-    "@types/lodash.clonedeep": "^4.5.7",
-    "@types/object-path": "^0.11.1",
-    "@types/react-avatar-editor": "^13.0.0",
-    "@types/react-datepicker": "^4.15.0",
-    "@types/react-dom": "^18.2.7",
-    "@types/sanitize-html": "^2.9.0",
-    "@types/twemoji-parser": "^13.1.1",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "assert": "^2.1.0",
     "autosize": "^6.0.1",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-named-asset-import": "^0.3.8",
     "base64-js": "^1.5.1",
-    "bfj": "^8.0.0",
     "bootstrap": "^5.3.1",
     "browser-image-compression": "^2.0.2",
-    "browserslist": "^4.22.1",
     "buffer": "^6.0.3",
-    "camelcase": "^8.0.0",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "change-case": "^5.3.0",
     "classnames": "^2.3.2",
     "clipboard-copy": "^4.0.1",
-    "css-loader": "^6.8.1",
-    "css-minimizer-webpack-plugin": "^5.0.1",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.3.1",
-    "dotenv-expand": "^10.0.0",
     "escape-string-regexp": "^5.0.0",
-    "eslint": "^8.53.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-webpack-plugin": "^4.0.1",
-    "file-loader": "^6.2.0",
     "formik": "^2.4.3",
-    "fs-extra": "^11.1.1",
     "general-category": "^1.6.0",
     "html-entities": "^2.4.0",
-    "html-webpack-plugin": "^5.5.3",
     "i18next": "^23.4.6",
     "i18next-icu": "^2.3.0",
-    "identity-obj-proxy": "^3.0.0",
     "intl-messageformat": "^10.5.0",
-    "jest": "^29.7.0",
-    "jest-resolve": "^29.7.0",
-    "jest-watch-typeahead": "^2.2.2",
     "katex": "^0.16.10",
     "lodash.clonedeep": "^4.5.0",
-    "mini-css-extract-plugin": "^2.7.6",
     "object-path": "^0.11.8",
     "object-path-immutable": "^4.1.2",
-    "postcss": "^8.4.31",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^7.3.3",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^9.3.0",
     "process": "^0.11.10",
-    "prompts": "^2.4.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-avatar-editor": "^13.0.0",
     "react-datepicker": "^4.16.0",
-    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-fast-compare": "^3.2.2",
@@ -101,7 +54,6 @@
     "react-popper": "^2.3.0",
     "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
-    "react-refresh": "^0.14.0",
     "react-share": "^4.4.1",
     "react-widgets": "^5.8.4",
     "react-widgets-date-fns": "^5.0.20",
@@ -109,32 +61,82 @@
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "reselect": "^4.1.8",
-    "resolve": "^1.22.8",
-    "resolve-url-loader": "^5.0.0",
     "sanitize-html": "^2.12.1",
-    "sass-loader": "^13.3.2",
     "scroll-into-view-if-needed": "^3.0.10",
-    "semver": "^7.3.5",
     "shorten-url": "^1.1.0",
-    "source-map-explorer": "^2.5.3",
-    "source-map-loader": "^4.0.1",
     "stream-browserify": "^3.0.0",
-    "style-loader": "^3.3.3",
-    "svg-inline-loader": "^0.8.2",
-    "terser-webpack-plugin": "^5.3.9",
-    "ts-loader": "^9.5.0",
     "twemoji-parser": "^14.0.0",
-    "typed-redux-saga": "^1.5.0",
-    "typescript": "^5.1.3",
     "uri-js": "^4.4.1",
-    "webpack": "^5.94.0",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-manifest-plugin": "^5.0.0",
     "workbox-broadcast-update": "^7.0.0",
     "workbox-core": "^7.0.0",
     "workbox-expiration": "^7.0.0",
     "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/plugin-syntax-flow": "^7.23.3",
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@svgr/webpack": "^8.1.0",
+    "@types/autosize": "^4.0.1",
+    "@types/jest": "^29.5.4",
+    "@types/lodash.clonedeep": "^4.5.7",
+    "@types/object-path": "^0.11.1",
+    "@types/react-avatar-editor": "^13.0.0",
+    "@types/react-datepicker": "^4.15.0",
+    "@types/react-dom": "^18.2.7",
+    "@types/sanitize-html": "^2.9.0",
+    "@types/twemoji-parser": "^13.1.1",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "bfj": "^8.0.0",
+    "browserslist": "^4.22.1",
+    "camelcase": "^8.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "change-case": "^5.3.0",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
+    "eslint": "^8.53.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-webpack-plugin": "^4.0.1",
+    "file-loader": "^6.2.0",
+    "fs-extra": "^11.1.1",
+    "html-webpack-plugin": "^5.5.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-resolve": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^7.3.3",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^9.3.0",
+    "prompts": "^2.4.2",
+    "react-dev-utils": "^12.0.1",
+    "react-refresh": "^0.14.0",
+    "resolve": "^1.22.8",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^13.3.2",
+    "semver": "^7.3.5",
+    "source-map-explorer": "^2.5.3",
+    "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.3",
+    "svg-inline-loader": "^0.8.2",
+    "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.5.0",
+    "typed-redux-saga": "^1.5.0",
+    "typescript": "^5.1.3",
+    "webpack": "^5.94.0",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-manifest-plugin": "^5.0.0",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "scripts": {
