--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "sanitize-html": "^2.12.1",
     "scroll-into-view-if-needed": "^3.0.10",
     "shorten-url": "^1.1.0",
+    "slate": "^0.110.2",
+    "slate-dom": "^0.111.0",
+    "slate-react": "^0.111.0",
     "stream-browserify": "^3.0.0",
     "twemoji-parser": "^14.0.0",
     "uri-js": "^4.4.1",
