--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/autosize": "^4.0.1",
     "@types/emoji-mart": "^3.0.14",
     "@types/jest": "^29.5.4",
+    "@types/katex": "^0.16.7",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/object-path": "^0.11.1",
     "@types/react-avatar-editor": "^13.0.0",
