--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "react-refresh": "^0.14.0",
     "resolve": "^1.22.8",
     "resolve-url-loader": "^5.0.0",
+    "sass": "^1.82.0",
     "sass-loader": "^13.3.2",
     "semver": "^7.3.5",
     "source-map-explorer": "^2.5.3",
