--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-avatar-editor": "^13.0.0",
+    "react-collapsed": "^4.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
