--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "markdown-it-sup": "^2.0.0",
     "object-path": "^0.11.8",
     "object-path-immutable": "^4.1.2",
+    "p-limit": "^6.2.0",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
