--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@popperjs/core": "^2.11.8",
     "@seznam/compose-react-refs": "^1.0.6",
     "@stomp/stompjs": "^7.0.0",
+    "@use-gesture/react": "^10.3.1",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "assert": "^2.1.0",
