--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
     "workbox-core": "^7.0.0",
     "workbox-expiration": "^7.0.0",
     "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0"
+    "workbox-strategies": "^7.0.0",
+    "worker-url": "^1.1.0",
+    "workerpool": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
